--- a/Mesh_gen/Mesh_gen/Mesh_gen.vcxproj.filters
+++ b/Mesh_gen/Mesh_gen/Mesh_gen.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="Mesh_Part2_funcs.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Mesh_Part3_funcs.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Meshfuncs.h">
