Added curvature refine, cusp detection, and solved LE.

--- a/Mesh_gen/Mesh_gen/Mesh_gen.vcxproj.filters
+++ b/Mesh_gen/Mesh_gen/Mesh_gen.vcxproj.filters
@@ -18,9 +18,6 @@
     <ClCompile Include="mesh_main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Meshfuncs.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="Mesh_Part2_funcs.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -28,6 +25,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Mesh_Part4_funcs.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Mesh_Part1_funcs.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
