--- a/.gitignore
+++ b/.gitignore
@@ -291,7 +291,7 @@ ehthumbs.db
 Desktop.ini
 
 # Recycle Bin used on file shares
-$RECYCLE.BIN/
+# $RECYCLE.BIN/
 
 # Windows Installer files
 *.cab
