Works on windows

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,9 +2,9 @@ project(TriGA_CPP)
 cmake_minimum_required(VERSION 3.9.0)
 
 # set the output folder where the project executable will be
-set(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR})
-set(SOURCE_DIR ${PROJECT_SOURCE_DIR}/lib)
 set(ROOT_DIR ${PROJECT_SOURCE_DIR})
+set(EXECUTABLE_OUTPUT_PATH ${ROOT_DIR}/build)
+set(SOURCE_DIR ${PROJECT_SOURCE_DIR}/lib)
 MESSAGE ("Source path: ${ROOT_DIR}")
 
 include_directories(Eigen_lib)
